<resources>
    <string name="scan_only_qr_codes">Scan only QR Codes</string>
    <string name="allmostThere">ALMOST THERE</string>
    <string name="scan">SCAN RESULT :</string>
    <string name="learnMore">Learn More</string>
    <string name="get">Get Going!</string>
    <string name="gett">Save some events you find interesting </string>
    <string name="gettt">and easily view them here later.</string>
    <string name="discover">discover events</string>
    <string name="tic">Lucky You!</string>
    <string name="ticc">Your calender is wide open, and we have</string>
    <string name="ticcc">got great events to help you fill it.</string>
    <string name="Session">Session</string>
    <string name="moreInfo">More Info</string>
    <string name="Total">Total</string>
    <string name="add">+ADD</string>
    <string name="view">+VIEW</string>
    <string name="MoreDetail">More Detail</string>
    <string name="time">Time</string>
    <string name="discardMessage">Are you sure you want to discard this message?</string>
    <string name="delete">Yes</string>
    <string name="cancel">No</string>
    <string name="Cancel">Cancel</string>
    <string name="price">Price</string>
    <string name="done">DONE</string>
    <string name="orderCompleted">ORDER COMPLETED</string>
    <string name="phoneNo">Phone Number</string>
    <string name="organisationTitle">Organisation Name</string>
    <string name="contact">Contact</string>
    <string name="app_name">htEvents</string>
    <string name="opendrawer">Open</string>
    <string name="closedrawer">Close</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_back">back</string>
    <string name="my_schedule">My Schedule</string>
    <string name="explore">Explore</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="share">Share</string>>
    <string name="register">Register</string>>
    <string name="bookmark">Bookmark</string>>
    <string name="snap">Snap Shot</string>>
    <string name="registerinfo">Click to LogIn</string>
    <string name="email">Email :</string>
    <string name="firstName">First Name</string>
    <string name="address">Address</string>
    <string name="app_id">171135796238815</string>>
    <string name="search_event">Search Events</string>>
    <string name="apply">apply</string>
    <string name="send">send</string>
    <string name="userName">User Name</string>
    <string name="userEmail">User Email</string>
    <string name="message">Message</string>
    <string name="venue">Venue Name</string>
    <string name="venueAddress">Complete Address</string>
    <string name="API_key">AIzaSyCHmoyZQDBtBzopCIkR-tkvvgqJigK55HA</string>
    <string name="textDiscription">Text Discription</string>
    <string name="dates">DATES</string>
    <string name="alldates">All Dates</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="weekend">Weekend</string>
    <string name="all_event_topics">AllEvent Topics</string>
    <string name="music">Music</string>
    <string name="buisness">Buisness</string>
    <string name="food_drink">Food and Drink</string>
    <string name="film_media">Film and Media</string>
    <string name="event_topics">EVENT TOPICS</string>
    <string name="event_types">EVENT TYPES</string>
    <string name="conference">Conference</string>
    <string name="seminar">Seminar</string>
    <string name="other">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_discription_of_item">DiscriptionOfItem</string>
    <string name="title_activity_registration">Registration</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_map_location">Map Location</string>
    <string name="title_activity_event_description">Event Description</string>
    <string name="username">username</string>
    <string name="username1">User Name</string>
    <string name="title_activity_profile_page">Profile Page</string>
    <string name="tickets">Ticket</string>
    <string name="saved">Saved</string>

    <string name="title_activity_contact_organizer">Contact Organizer</string>
    <string name="action_logout">logout</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="Logout">Log Out</string>
    <string name="awesome">Awesome!</string>
    <string name="awesomeMsg">You already have tickets for this</string>
    <string name="aww">event.</string>
    <string name="viewTicket">View Ticket</string>
    <string name="logoutMsg">Are you sure you want to Log out?</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_settings__user_profile">settings_User_profileActivity</string>
    <string name="save">save</string>
    <string name="emailAddress">Email Address</string>
    <string name="registrationinfo">Registration Information</string>
    <string name="ticket">Ticket Buyer</string>
    <string name="name">Name :</string>
    <string name="getname">User Name</string>
    <string name="invite">invite</string>
    <string name="contactnumber">Contact Number :</string>
    <string name="editHint">Tap to enter</string>
    <string name="organization">Organization Name :</string>
    <string name="organizationwebsite">Organization Website</string>
    <string name="attendeecontinue">CONTINUE</string>
    <string name="title_activity_attendees_info">Attendees</string>
    <string name="title_activity_order_breakdown">Order Breakdown</string>
    <string name="title">Title</string>
    <string name="title_activity_ticket_info">TicketInfo</string>
    <string name="title_activity_organisation_description">OrganisationDescription</string>
    <string name="title_activity_event_schedule">EventScheduleActivity</string>


</resources>
