<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_items_home"
        android:checkableBehavior="single">
        <item
            android:id="@+id/myschedule_item"
            android:title="@string/my_schedule"
            android:icon="@drawable/calendar">
        </item>
    </group>
    <group
        android:id="@+id/menu_items"
        android:checkableBehavior="single" >
        <item
            android:id="@+id/explore_item"
            android:title="@string/explore"
            android:icon="@drawable/binoculars">

        </item>
        <item
            android:icon="@drawable/map"
            android:id="@+id/map_item"
            android:title="@string/map">

        </item>
    </group>
    <group
        android:id="@+id/menu_extra"
        android:checkableBehavior="single">

        <item
            android:id="@+id/settings_item"
            android:title="@string/settings"
            android:icon="@drawable/settings">
        </item>

        <item
            android:icon="@drawable/about"
            android:id="@+id/about_item"
            android:title="@string/about">

        </item>

    </group>

</menu>