<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fragment_backgrnd"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/orderbreakbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/overlayBlue"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/footer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent_black"
        >

        <TextView
            android:id="@+id/continuetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attendeecontinue"
            android:textAllCaps="true"
            android:typeface="sans"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/Text_title"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/green"

            />
    </RelativeLayout>


<ScrollView
    android:id="@+id/scrollView"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:layout_above="@+id/footer1"
    android:layout_below="@+id/orderbreakbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/venueName"
            android:textColor="@color/Text_title"
            android:text="@string/venue"
            android:textSize="25sp"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/white"
            android:paddingBottom="5dp"
            />
        <TextView
            android:id="@+id/venuetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="20sp"
            android:textColor="@color/Text_time"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            />


   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Total"
        android:textSize="25sp"
        android:textColor="@color/green"
        android:background="@color/white"
        android:layout_marginTop="1dp"
        android:padding="10dp"
        android:id="@+id/total" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/green"
            android:background="@color/white"
            android:text="@string/price"
            android:id="@+id/Regprice"
            android:layout_alignRight="@+id/total"
            android:layout_centerVertical="true"
            android:paddingRight="10dp"
            />

   </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MoreDetail"
        android:textSize="20sp"
        android:textColor="@color/Text_title"
        android:padding="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/name"
        android:textColor="@color/Text_time"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        />
    <TextView
        android:id="@+id/RegUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/name"
        android:textColor="@color/Text_time"
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="1dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/email"
        android:textColor="@color/Text_time"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        />
    <TextView
        android:id="@+id/RegUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/emailAddress"
        android:textColor="@color/Text_time"
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="1dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/phoneNo"
        android:textColor="@color/Text_time"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        />
    <TextView
        android:id="@+id/RegUserPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/phoneNo"
        android:textColor="@color/Text_time"
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="1dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/organization"
        android:textColor="@color/Text_time"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        />
    <TextView
        android:id="@+id/RegUserOrg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/organization"
        android:textColor="@color/Text_time"
        android:textSize="15sp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="1dp"
        />

</LinearLayout>
</ScrollView>


</RelativeLayout>
