<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fragment_backgrnd">

    <android.support.v7.widget.Toolbar
        android:id="@+id/attendeebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/overlayBlue"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                />

    <RelativeLayout
        android:id="@+id/footer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent_black"
        >

        <TextView
            android:id="@+id/continuetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attendeecontinue"
            android:textAllCaps="true"
            android:typeface="sans"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/Text_title"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/green"

            />

    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_above="@+id/footer1"
        android:layout_below="@+id/attendeebar">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/Text_title"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:text="@string/registrationinfo"
        android:background="@color/white"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/Text_title"
        android:textSize="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:textStyle="bold"
        android:text="@string/ticket"
        android:textAllCaps="true"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/Text_title"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:text="@string/name"
        android:background="@color/white"/>
    <TextView
        android:id="@+id/getuserName"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/Text_title"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/getname"
        android:background="@color/white"
        android:layout_marginBottom="5dp"
        />


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/Text_title"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:text="@string/email"
        android:background="@color/white"/>
    <TextView
        android:id="@+id/attendeeEmail"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/Text_title"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/userEmail"
        android:background="@color/white"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/Text_title"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/contactnumber"
        android:background="@color/white"
        android:layout_marginBottom="1dp"/>

    <EditText
        android:id="@+id/contactNumber"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editHint"
        android:inputType="number"
        android:textSize="20sp"
        android:textColor="@color/Text_title"
        android:background="@color/white"
        android:textColorHint="@color/Text_venue"
        android:theme="@style/EditTextTheme"
        android:layout_marginBottom="5dp"/>

   <TextView
        android:layout_width="match_parent"
         android:layout_height="wrap_content"
        android:textColor="@color/Text_title"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/organization"
        android:background="@color/white"
        android:layout_marginBottom="1dp"/>

    <EditText
        android:id="@+id/company"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editHint1"
        android:inputType="text"
        android:textSize="20sp"
        android:textColor="@color/Text_title"
        android:background="@color/white"
        android:textColorHint="@color/Text_venue"
        android:theme="@style/EditTextTheme"
        android:layout_marginBottom="5dp"/>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textColor="@color/Text_title"
    android:textSize="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:layout_marginTop="1dp"
    android:text="@string/organizationwebsite"
    android:background="@color/white"
    android:layout_marginBottom="1dp"/>

    <EditText
        android:id="@+id/companywebsite"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editHint2"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textColor="@color/Text_title"
        android:background="@color/white"
        android:textColorHint="@color/Text_venue"
        android:theme="@style/EditTextTheme"
        android:layout_marginBottom="5dp"/>














</LinearLayout>
</ScrollView>


</RelativeLayout>
