<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/logout_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/logoutMsg"
        android:textColor="@color/Text_venue"
        android:textSize="20sp"
        android:padding="35dp"
        android:textStyle="bold"
       />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Logout"
            android:textColor="@color/overlayBlue"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="30dp"
            />
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textColor="@color/overlayBlue"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/logout"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>
</LinearLayout>