<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.ht.event.activity.ContactOrganizer">

    <android.support.v7.widget.Toolbar
        android:id="@+id/organiserBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        android:minHeight="?attr/actionBarSize">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:text="@string/send"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="right|center_horizontal"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize">

    <EditText
        android:id="@+id/userName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        android:inputType="text"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/Text_title"
        android:textColorHint="@color/grey05"
        android:theme="@style/EditTextTheme"



        />
    <EditText
        android:id="@+id/userEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/userEmail"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        android:textColorHint="@color/grey05"
        android:textColor="@color/Text_title"
        android:theme="@style/EditTextTheme"



        />
    <EditText
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="15sp"
        android:textColor="@color/Text_title"
        android:textColorHint="@color/grey05"
        android:hint="@string/message"
        android:inputType="text"
        android:theme="@style/EditTextTheme"
        />


    </LinearLayout>

</FrameLayout>
