<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/discardMessage"
        android:textColor="@color/Text_venue"
        android:textSize="15sp"
        android:padding="20dp"
        android:textStyle="bold"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/overlayBlue"
                android:textSize="15sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                 />
            <TextView
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/overlayBlue"
                android:textSize="15sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_toLeftOf="@+id/cancel"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                />
        </RelativeLayout>
</LinearLayout>